<resources>
    <string name="app_name">Gereksiz Sorular</string>
    <string name="soru"></string>
    <string name="secenekler"></string>
    <string name="secenek1"></string>
    <string name="secenek2"></string>
    <string name="secenek3"></string>
    <string name="secenek4"></string>
    <string name="sonraki">Sonraki</string>
    <string name="yanlis"></string>
    <string name="dogru">SKOR: </string>
    <string name="hak">HAK: </string>
    <string name="gameover"></string>
    <string name="tekraOyna">Tekrar Oyna</string>
    <string name="oyundanCik">ÇIKIŞ</string>
    <string name="oyunabasla">OYUNA BAŞLA</string>
    <string name="cik">ÇIK</string>
    <string name="appnamee">Gereksiz Sorular</string>

</resources>
